cleaned up code, added automatic course name generation + support for reordering multiple keys

--- a/chart.html
+++ b/chart.html
@@ -3,41 +3,48 @@
 <meta charset="utf-8">
 <style>
 
-body {
+#bar-chart {
   font: 10px sans-serif;
+  display: block;
+  width: 100%;
+  float: left;
+  margin-top: 5px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .axis path,
 .axis line {
   fill: none;
-  stroke: #000;
+  stroke: #7f8c8d;
   shape-rendering: crispEdges;
+}
+
+.axis text {
+  fill: #7f8c8d !important;
 }
 
 .bar {
   fill: steelblue;
 }
 
-.x.axis path {
+/*.x.axis path {
   display: none;
-}
+}*/
 
 </style>
-<body>
+<body id="bar-chart">
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
-// Make a JSON object out of the data.d string receieved.
-json_data = [{ "YEAR": 2012, "MONTH": 1,  "MMM": "JAN", "Total": 36, "Completed": 21, "Canceled": 10,  "Aborted": 5 },
-            { "YEAR": 2012, "MONTH": 2,  "MMM": "FEB", "Total": 60, "Completed": 30, "Canceled": 21, "Aborted": 9 }];
-
-var data3 = [{"key":"JAN","values":
-                 [{"key":"the_course_as_a_whole","value":36},
-                 {"key":"instructors_effectiveness","value":21}]},
-            {"key":"FEB","values":
-                 [{"key":"the_course_as_a_whole","value":60},
-                 {"key":"instructors_effectiveness","value":9}]}];
-
-var data1 = [ // TODO convert to format similar to data3
+/*
++ Make the bars less fat
++ Update modifyData to perform calculations for all keys
++ Pass the right values to modifyData 1 and 2
++ Pretty print x axis labels
++ Clean up code
+*/
+var data1 = [
   {
     "the_course_as_a_whole": 5,
     "time": 131,
@@ -137,7 +144,19 @@ var data1 = [ // TODO convert to format similar to data3
   }
 ];
 
-function modifyData(data, key) { // TODO change to push all five ratings!
+var KEY_TO_HEADER = {
+        "course_whole_code": "Course Code",
+        "professor": "Instructor",
+        "the_course_as_a_whole": "Overall",
+        "the_course_content": "Content",
+        "amount_learned": "Amount Learned",
+        "instructors_effectiveness": "Teaching",
+        "grading_techniques": "Grading",
+        "percent_enrolled" : "% Completed"
+    };
+
+var courseNames = [];
+function modifyData(data, keys) { // TODO change to push all five ratings!
             var newData = []
             var existingData = {}
 
@@ -175,37 +194,27 @@ function modifyData(data, key) { // TODO change to push all five ratings!
             return newData;
         }
 
-//[{"the_course_as_a_whole":5,"time":131,"professor":"Allison Obourn","course_whole_code":"CSE142","instructors_effectiveness":"3.2"},
-//{"the_course_as_a_whole":2,"time":131,"professor":"Allison Obourn","course_whole_code":"CSE142","instructors_effectiveness":"4.9"},
-//{"the_course_as_a_whole":5,"time":131,"professor":"Stuart Reges","course_whole_code":"CSE143","instructors_effectiveness":"1.7"},
-        function modifyData2(data, key) {
-            var newData = []
-            var course_as_a_whole = {}
-            var instructors_effectiveness = {}
+        function reorderData(data, keys) {
+            var ratings = {}
+            for(var i = 0; i < keys.length; i++) {
+              ratings[i] = {};
+            }
             var arr = {}
 
             for(var i = 0; i < data.length; i++) {
                 var dataPoint = data[i];
                 var course_whole_code = dataPoint["course_whole_code"];
-                course_as_a_whole[course_whole_code] = dataPoint.the_course_as_a_whole;
-                instructors_effectiveness[course_whole_code] = dataPoint.instructors_effectiveness;
+                courseNames.push(course_whole_code);
+                for(var j = 0; j < keys.length; j++) {
+                  ratings[j][course_whole_code] = dataPoint[keys[j]];
+                }
             }
 
-            arr["the_course_as_a_whole"] = d3.entries(course_as_a_whole);
-            arr["instructors_effectiveness"] = d3.entries(instructors_effectiveness);
+            for(var i = 0; i < keys.length; i++) {
+              arr[keys[i]] = d3.entries(ratings[i]);
+            }
             arr = d3.entries(arr);
-            // Set to previous format
-            /*for (var attribute in existingData) {
-                if( existingData.hasOwnProperty(attribute) ) {
-                    var course = JSON.parse(attribute);
-                    var rating = existingData[attribute];
-                    course["the_course_as_a_whole"] = parseFloat((rating["sum"] / rating["count"]).toFixed(2));
-                    course["instructors_effectiveness"] = parseFloat((rating["sum"] / rating["count"]).toFixed(2));
-                    newData.push(course);
-                }
-            }*/
 
-            //return newData;
             return arr;
         }
 
@@ -218,115 +227,46 @@ var data2 = d3.nest()
     })
     .entries(data1);
 
-// width = 960 - 40 - 20 = 900
-// height = 500 - 20 - 30 = 450
 var margin = { top: 20, right: 20, bottom: 30, left: 40 },
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
-//  Information on ordinal scales can be found at: https://github.com/mbostock/d3/wiki/Ordinal-Scales
-//  An ordinal scale that sets the output range from the specified continuous interval (that is, [0, width]).
-//  The array interval contains two elements representing the min and max numeric values.
-//  This interval is subdivided into n evenly-spaced bands, where n is the number of (unique) values in the domain.
-//  The bands may be offset from the edge of the interval and other bands according to the specifided padding, 
-//      which defaults to zero.
-//  The padding is typically in the range [0,1] (0.1 in this example) and corrseponds to the amount of space
-//      in the range interval to allocate to padding.
-//  A value of 0.5 means that the band width will be equal to the padding width.
 var x0 = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
 
-//  Constructs a new ordinal scale with an empty domain and an empty range.
-//  The ordinal scale is invalid (always returning undefined) until an output range is specified).
 var x1 = d3.scale.ordinal();
 
-//  Information on linear scales can be found at: https://github.com/mbostock/d3/wiki/Quantitative-Scales
-//  Quantitative scales have a continuous domain, such as the set of real numbers, or dates.
-//  Linear scales are a type of quantitative scale.
-//  Linear scales are the most common scale, and a good default choice to map a continuous input domain to a
-//      continous output range.
-//  The mapping is linear in that the output range value y can be expressed as a linear function of the
-//      input domain value x: y = mx + b.
-//  The input domain is typically a dimension of the data that you want to visualize, such as the height of
-//      students (measured in meters) in a sample population.
-//  The output range is typically a dimension of the desired output visualization, such as the height of bars
-//      (measured in pixels) in a histogram.
-
-//  This will set up our y height scale.
 var y = d3.scale.linear()
     .range([height, 0]);
 
-// Colors of the graph.
-//
-// First    : Total flights #097054 (green)
-// Second   : Completed flights #6599FF (blue)
-// Third    : Cancelled flights #FFDE00 (yellow)
-// Fourth   : Aborted flights #FF9900 (orange)
-var color = d3.scale.category10();//d3.scale.ordinal()
-    //.range(["#097054", "#6599FF", "#FFDE00", "#FF9900"]);
+var color = d3.scale.category10();
 
-//  Set up the xAxis to use our x0 scale and be oriented on the bottom.
 var xAxis = d3.svg.axis()
     .scale(x0)
     .orient("bottom");
-    // We don't worry about tickFormat here, as the ticks will be determined by the data.
 
-//  Set up the yAxis to use our y scale and be oriented on the left.
-//      Additionally, set the tick format to display appropriate labels on the axis (taking out for now).
 var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left");
-//    .tickFormat(d3.format(".2s"));
+yAxis.tickValues([0, 1, 2, 3, 4, 5]);
+yAxis.tickFormat(d3.format(".0f"));
 
-// Set up the svg canvas with the width and height we calculated earlier.
-var svg = d3.select("body").append("svg")
+var svg = d3.select("#bar-chart").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-// Move it to the right margin.left pixels, and move it down margin.top pixels
 
+data = reorderData(modifyData(data1, ["the_course_as_a_whole", "instructors_effectiveness"]), ["the_course_as_a_whole", "instructors_effectiveness"]);
 
-// Our JSON looks like:
-//               [{ "YEAR": 2012, "MONTH": 1,  "MMM": "JAN", "Total": 36, "Completed": 21, "Canceled": 10,  "Aborted": 5 },
-//                { "YEAR": 2012, "MONTH": 2,  "MMM": "FEB", "Total": 60, "Completed": 30, "Canceled": 21, "Aborted": 9 }]
+courseNames = d3.set(courseNames).values();
 
-//                data = d3.nest()
-//                    .key(function (d) { return d.MMM + " " + d.YEAR; })
-//                    .entries(json_data)
-data = modifyData2(modifyData(data1, "key"), "key");//data3;//json_data
-console.log("theirs", data3);
-console.log("mine", modifyData2(modifyData(data1, "key"), "key"));
-
-// seriesNames = "Total", "Completed", "Canceled" and "Aborted"               See, we're filtering out "YEAR", "MONTH" and "MMM"
-//var seriesNames = d3.keys(json_data[0]).filter(function (key) { return (key !== "YEAR") && (key !== "MONTH") && (key !== "MMM"); });
-//                alert(JSON.stringify(seriesNames));
-//                alert(seriesNames);
-
-var seriesNames = ["CSE142", "CSE143", "Hiiiiii", "CSE403", "CSE311", "CSE312", "CSE333"];
-//data.forEach(function (d) {
-//    d.values = seriesNames.map(function (name) { return { name: name, value: +d[name] }; });
-    //alert("hi --- " + JSON.stringify(d.Flights));
-//});
-
-//alert(JSON.stringify(data));
-
-//x0.domain(data.map(function (d) { return d.State; }));
-// Change State to be MMM, YEAR (for example: "Jan 2012") Could change this to Jan '12
 x0.domain(data.map(function (d) { return d.key; }));
 
-//alert(JSON.stringify(data.map(function (d) { return d.MMM + " " + d.YEAR; })));
+x1.domain(courseNames).rangeRoundBands([0, x0.rangeBand()]);
 
-//                //x1.domain(seriesNames).rangeRoundBands([0, x0.rangeBand()]);
-x1.domain(seriesNames).rangeRoundBands([0, x0.rangeBand()]);
+y.domain([0, 5]);
 
-
-//                //y.domain([0, d3.max(data, function (d) { return d3.max(d.ages, function (d) { return d.value; }); })]);
-//                // Make the y domain go from 0 up to the max of d.Total (Total flights)
-//                y.domain([0, d3.max(data, function (d) { return d3.max(d.Total); })]);
-y.domain([0, (10 + d3.max(data, function (d) { return d3.max(d.value, function (d) { return d.value; }); }))]);
-
-// The axis business
 svg.append("g")
     .attr("class", "x axis")
     .attr("transform", "translate(0," + height + ")")
@@ -337,19 +277,12 @@ svg.append("g")
     .call(yAxis)
 .append("text")
     .attr("transform", "rotate(-90)")
-    .attr("y", 6)
+    .attr("y", 8 - margin.left)
+    .attr("x",0 - (height / 2))
     .attr("dy", ".71em")
-    .style("text-anchor", "end")
-    .text("# of Flights");
+    .style("text-anchor", "middle")
+    .text("Rating");
 
-
-// From this point to...
-
-//var state = svg.selectAll(".state")
-//    .data(data)
-//.enter().append("g")
-//    .attr("class", "g")
-//    .attr("transform", function (d) { return "translate(" + x0(d.State) + ",0)"; });
 
 var state = svg.selectAll(".state")
     .data(data)
@@ -357,7 +290,6 @@ var state = svg.selectAll(".state")
     .attr("class", "g")
     .attr("transform", function (d) { return "translate(" + x0(d.key) + ",0)"; });
 
-//alert(JSON.stringify(d.Flights[0]));
 state.selectAll("rect")
     .data(function (d) { return d.value; })
 .enter().append("rect")
@@ -369,7 +301,7 @@ state.selectAll("rect")
 
 
 var legend = svg.selectAll(".legend")
-    .data(seriesNames.slice().reverse())
+    .data(courseNames.slice().reverse())
 .enter().append("g")
     .attr("class", "legend")
     .attr("transform", function (d, i) { return "translate(0," + i * 20 + ")"; });
@@ -388,17 +320,5 @@ legend.append("text")
     .text(function (d) { return d; })
     .on("click", function (d) {
         alert(d);
-        //state.selectAll("rect")
-        //.update()
-
-        //                        .exit().transition()
-        //                            .attr("height", 0)
-        //                            .remove();
-
-        //state.selectAll("rect")
-        //.update()
-
-
-        //state.selectAll("rect").exit().transition().attr("height", 0).remove();
     });
 </script>
